--- a/src/leiningen/new/luminus/core/resources/log4j.properties
+++ b/src/leiningen/new/luminus/core/resources/log4j.properties
@@ -1,9 +1,10 @@
-### Direct log4j properties to STDOUT ###
+### stdout appender
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d][%p][%c] %m%n
 
+### rolling file appender
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.File=./log/<<name>>.log
 
@@ -13,4 +14,6 @@ log4j.appender.R.MaxBackupIndex=20
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=[%d][%p][%c] %m%n
 
+### root logger sets the minimum logging level
+### and aggregates the appenders
 log4j.rootLogger=DEBUG, stdout, R
