improved default logging

--- a/src/leiningen/new/luminus/core/resources/log4j.properties
+++ b/src/leiningen/new/luminus/core/resources/log4j.properties
@@ -14,6 +14,10 @@ log4j.appender.R.MaxBackupIndex=20
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=[%d][%p][%c] %m%n
 
+### suppress 3rd party debug logs
+log4j.logger.org.xnio.nio=INFO
+log4j.logger.com.zaxxer.hikari.pool=INFO
+
 ### root logger sets the minimum logging level
 ### and aggregates the appenders
 log4j.rootLogger=DEBUG, stdout, R
