made db logging exclusions contextual

--- a/src/leiningen/new/luminus/core/resources/log4j.properties
+++ b/src/leiningen/new/luminus/core/resources/log4j.properties
@@ -16,7 +16,7 @@ log4j.appender.R.layout.ConversionPattern=[%d][%p][%c] %m%n
 
 ### suppress 3rd party debug logs
 log4j.logger.org.xnio.nio=INFO
-log4j.logger.com.zaxxer.hikari.pool=INFO
+<% if relational-db %><% if not embedded-db %>log4j.logger.com.zaxxer.hikari=INFO<% endif %><% endif %>
 
 ### root logger sets the minimum logging level
 ### and aggregates the appenders
