factored out HTTP servers into libraries

--- a/src/leiningen/new/luminus/core/resources/log4j.properties
+++ b/src/leiningen/new/luminus/core/resources/log4j.properties
@@ -17,6 +17,8 @@ log4j.appender.R.layout.ConversionPattern=[%d][%p][%c] %m%n
 ### suppress 3rd party debug logs
 log4j.logger.org.xnio.nio=INFO
 <% if relational-db %><% if not embedded-db %>log4j.logger.com.zaxxer.hikari=INFO<% endif %><% endif %>
+<% ifequal server "jetty" %>log4j.logger.org.eclipse.jetty=INFO<% endifequal %>
+<% ifequal server "aleph" %>log4j.logger.io.netty=INFO<% endifequal %>
 
 ### root logger sets the minimum logging level
 ### and aggregates the appenders
