--- a/resources/leiningen/new/luminus/core/env/dev/resources/log4j.properties
+++ b/resources/leiningen/new/luminus/core/env/dev/resources/log4j.properties
@@ -16,7 +16,7 @@ log4j.appender.R.layout.ConversionPattern=[%d][%p][%c] %m%n
 
 ### suppress 3rd party debug logs
 log4j.logger.org.xnio.nio=INFO
-<% if relational-db %><% if not embedded-db %>log4j.logger.com.zaxxer.hikari=INFO<% endif %><% endif %>
+<% if relational-db %>log4j.logger.com.zaxxer.hikari=INFO<% endif %>
 <% ifequal server "jetty" %>log4j.logger.org.eclipse.jetty=INFO<% endifequal %>
 <% ifequal server "aleph" %>log4j.logger.io.netty=INFO<% endifequal %>
 
