--- a/resources/leiningen/new/luminus/core/Procfile
+++ b/resources/leiningen/new/luminus/core/Procfile
@@ -1,1 +1,1 @@
-web: java $JVM_OPTS -cp target/uberjar/<<name>>.jar clojure.main -m <<project-ns>>.core
+web: java -cp target/uberjar/<<name>>.jar clojure.main -m <<project-ns>>.core
